# graphql-gateway-benchmarks

./: .gitignore  README.md  RESULTS_BURST.md  RESULTS_CONSTANT.md  RESULTS_CONSTANT_LATENCY.md  RESULTS_RAMPING.md  profiles.json
.github/workflows/: benchmark.yml
apollo-federation/subgraphs/: install.sh  main.rs
apollo-federation/subgraphs-net/: build.sh  start.sh
apollo-federation/subgraphs-rust/: Cargo.toml  main.rs  start.sh
benchmark-runs/104/: RESULTS_BURST.md  RESULTS_CONSTANT.md  RESULTS_CONSTANT_LATENCY.md
benchmark-runs/105/: RESULTS_CONSTANT_LATENCY.md
benchmark-runs/107/: RESULTS_BURST.md  RESULTS_CONSTANT_LATENCY.md
benchmark-runs/112/: RESULTS_CONSTANT_LATENCY.md
benchmark-runs/117/: RESULTS_CONSTANT_LATENCY.md
benchmark-runs/126/: RESULTS_CONSTANT_LATENCY.md
benchmark-runs/127/: RESULTS_BURST.md  RESULTS_CONSTANT.md  RESULTS_CONSTANT_LATENCY.md
benchmark-runs/128/: RESULTS_BURST.md  RESULTS_CONSTANT.md  RESULTS_CONSTANT_LATENCY.md
benchmark-runs/129/: RESULTS_BURST.md  RESULTS_CONSTANT.md  RESULTS_CONSTANT_LATENCY.md
benchmark-runs/130/: RESULTS_BURST.md
benchmark-runs/131/: RESULTS_BURST.md  RESULTS_CONSTANT.md  RESULTS_CONSTANT_LATENCY.md
benchmark-runs/133/: RESULTS_BURST.md  RESULTS_CONSTANT_LATENCY.md
benchmark-runs/134/: RESULTS_BURST.md
benchmark-runs/135/: RESULTS_CONSTANT.md
benchmark-runs/136/: RESULTS_CONSTANT.md  RESULTS_CONSTANT_LATENCY.md
composite-schema/: Directory.Build.props
k6/: benchmark.sh  generate-results.py  isolate-system-cpus.sh  k6-conditions.js  k6.js  monitor.sh  verify-pinning.sh
(+385 files in other folders)
