[package]
name = "subgraphs"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "subgraphs"
path = "main.rs"

[lib]
name = "subgraphs"
path = "lib.rs"

[dependencies]
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
axum = "0.8.9"
lazy_static = "1.5.0"
rand = "0.10.1"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
